public/stylesheets/style.css
/* ... */
.featured_articles .team-item .item-top, .articles .team-item .item-top {
  left: 194px;
  margin-bottom: 5px;
  position: relative;
  top: -141px;
}

.featured_articles .team-item .item-top h3, .articles .team-item .item-top h3 {
  font-size:18px;
  font-weight:normal;
}

.featured_articles .team-item .summary, .articles .team-item .summary {
  clear:left;
  margin-top:23px;
}

.featured_articles .team-item .items-buttons, .articles .team-item .items-buttons {
  background: none repeat scroll 0 0 transparent;
  display: block;
  left: 190px;
  margin-bottom: 5px;
  overflow: hidden;
  padding-top: 4px;
  position: relative;
  top: -100px;
  width: 132px;
}

.featured_articles .votes, .articles .votes {
  left: 0;
  position: absolute;
  top: 120px;
}

.article .content_category {
  padding: 30px;
  overflow: hidden;
}

.article .smack_container .smack_content {
  padding: 10px 20px 10px 0;
  background:transparent;
  float:left;
  text-align:left;
}

.article .summary {
  font-size: 13px;
  line-height: 1.7em;
  margin: 22px 0px;
  text-align: justify;
}

.article .photo img {
  max-width:350px;
}

.article .smack_content {
  margin-bottom:0px;
}

.article_college a {
  color:#0476C7 !important;
}

.team-item .item-top {
  font-size: 70%;
  margin-bottom: 5px;
}

.team-item .item-top h3 {
  font-size: 14px;
  margin-bottom: 5px;
}

.team-item .item-top h3 a:hover {
  text-decoration: underline;
  color:#0476c7;
}

.team-item .dislike {
  margin-left: 5px;
}

.team-item .which-college {
  float: left;
  overflow: hidden;
  color: #999;
  text-transform: uppercase;
}

.team-item .which-college a {
  color: #0476C7;
}

.team-item .which-college a:hover {
  text-decoration: underline;
}

.votes .voting_icons {
  margin-left: 10px;
}

.voting_icons {
  margin-left: 22px;
}

.team-item .voting_icons {
  margin-left: 10px;
}

.voting_icons a {
  margin-right: 4px;
}

.voting_icons b {
  font-size:12px;
  position: relative;
  top: 2px;
}

ul.actions li {
  float: left;
}

.actions .voting_icons {
  margin-left: 4px;
}

.team-item .preview {
  clear: both;
  height: 135px;
  width: 180px;
  margin-bottom: 5px;
  overflow: hidden;
}

.team-item .summary {
  font-size:13px;
  height: 45px;
  margin-bottom: 5px;
  overflow: hidden;
}

.team-item .items-buttons {
  overflow: hidden;
  padding-top: 4px;
  margin-bottom: 5px;
}

.team-item .items-buttons .share_smack_btn {
  float: right;
  border: none;
}

/* News sidebar */

.news {
  width: 173px;
  background: #F3F3F3;
  margin-left: 591px;
  border-top: 2px solid #fff;
  padding: 13px 10px 10px 10px;
}

.news .category_title {
  font-size: 18.72pt;
  font-weight: bold;
  border-bottom: 1px solid #D4D4D4;
  margin-bottom: 10px;
}

.news .items {
  padding: 5px 0;
}

.news .team-item {
  width: auto;
  margin-left: 0;
  float: none;
  margin-top: 5px;
}

.news .team-item .item-buttons img[alt="Send as smack"] {
  margin-left: 84px;
}

.news .summary {
  height: auto;
}

.news .summary a {
  color: #000000;
}

.news .summary a:hover {
  color: #30A0F0;
}

.news .summary a.snap_shots {
  font-size: 10px;
  color: #30a0f0;
}

.news .snap_shots:hover {
  text-decoration: underline;
}

.news ul.items {
  margin-right: 0;
  list-style: none;
}

.news ul.items .votes {
  position: absolute;
  bottom: 0;
  left: 61px;
}

.news ul.items .votes .vote_up_count {
  border-right: 1px solid #999;
  padding-right: 5px;
}

.news ul.items .team-item {
  margin-right: 0;
  margin-bottom: 10px;
  position: relative;
}

ul.contact-groups {
  list-style-type: none;
}

#loading_div {
  display: none;
}

.fakebtn:hover {
  cursor: pointer;
}

#stats_container {
  overflow: auto;
  position: relative;
}

#stats_container a:hover {
  text-decoration: underline;
}

#stats_widget {
  background: url("/images/table_bg.png") repeat-x;
  width: 926px;
  padding: 0 17px;
  overflow: hidden;
}

#stats_container #slideInner {
  position: relative;
}

#stats_widget .control {
  cursor: pointer;
  width: 17px;
  height: 106px;
  position: absolute;
}

#stats_widget .control#left_arrow {
  left: 0;
  background: url(/images/scroll_left.png);
}

#stats_widget .control#right_arrow {
  right: 0;
  background: url(/images/scroll_right.png);
}

.table_middle {
  float: left;
  height: 106px;
}

div.page {
  padding: 15px;
}

.page h2 {
  font-size: 25px;
  margin-top: 1em;
  font-weight: bold;
  border-bottom: 2px solid #D4D4D4;
}

.page h3 {
  font-size: 18px;
  margin-top: 1em;
}

.page h4 {
  font-size: 15px;
  margin-top: 1em;
}

.page ul.links li ul li,
.page ol {
  padding-left: 40px;
}

.page p,
.page ol {
  margin: 15px 0;
  line-height: 18px;
}

.page img.left {
  margin-right: 15px;
  float: left;
}

.page li {
  line-height: 2em;
}

.page a {
  text-decoration: underline;
}

.page a:hover {
  color: #30A0F0;
}

#shifting_fields .description .field_with_errors,
#shifting_fields .description label {
  float: right;
}

div#error_explanation {
  padding: 1em;
  color: red;
}

#shifting_fields .field_with_errors {
  float: left;
}

.thumbnail_yt {
  width: 180px;
}

.sotw h1 {
  font-family: "Conv_MyriadPro-BoldCond";
  font-size: 40px;
}

div.fb-like-box {
  float: right;
  margin-top: 15px;
}

#per_page {
  float:right;
}

.category_sort_div {
  float:left;
}

#per_page .per_page {
  float:right;
}

#per_page .per_page li {
  float:left;
  margin: 0 0 0 5px;
}

#per_page .items_per_page {
  float:right;
}

#upload_progress {
  background: #FFF;
  border: solid 1px rgb(32, 115, 180);
  height: 37px;
}

#upload_bar {
  background: rgb(32, 115, 180);
  color: #FFF;
  font-weight: bold;
  text-align: center;
  height: 17px;
  padding: 10px 0;
}

.most_smacked {
  background: none repeat scroll 0 0 #FFFFFF;
  border: 1px solid #DADADA;
  color: #C6C6C6;
  margin: 0 20px 30px 20px;
  padding: 0px;
  position: relative;
  top: 24px;
  font-size: 15px;
  display: inline-block;
}
/* ... */

